--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <main class="container">
-    <h1 class="text-center">Energy required to change H<sub>2</sub>0 temperature</h1>
+    <h1 class="text-center">Energy required to change H<sub>2</sub>O temperature</h1>
     <table>
       <!-- energy unit radio button -->
       <tr>
