--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="inputs-section">
       <div class="input-group mb-4">
         <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Mass of water:</span>
+          <span class="input-group-text" id="basic-addon1">Mass of H<sub>2</sub>O:</span>
         </div>
         <input type="text" class="form-control" id="mass" placeholder="grams" aria-label="Username" aria-describedby="basic-addon1" />
         <span> g</span>
