Updated UI and fixed UI bug
Updated UI to include kelvin scale. Fixed the temperature indications in the placeholder and next to the inputs when refreshing the page.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="unit">
         <table>
           <tr>
-            <td align="center" colspan="2">
+            <td align="center" colspan="3">
               <strong>Temperature units:</strong>
             </td>
           </tr>
@@ -67,6 +67,11 @@
             <td>
               <div class="pad-cell">
                 <input type="radio" name="tempType" id="FRadio"> Fahrenheit</input>
+              </div>
+            </td>
+            <td>
+              <div class="pad-cell">
+                <input type="radio" name="tempType" id="KRadio"> Kelvin</input>
               </div>
             </td>
           </tr>
