Kelvin logic, below zero exception, updated output

--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
     </div>
     <!-- Calculate button -->
     <button type="submit" class="btn btn-secondary">Calculate</button>
-    <div class="result"> </div>
   </main>
+  <div class="result container"> </div>
+
 
   <aside class="container">
     <h4>Procedure:</h4>
