--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Mass of H<sub>2</sub>O:</span>
         </div>
-        <input type="text" class="form-control" id="mass" placeholder="grams" aria-label="Username" aria-describedby="basic-addon1" />
+        <input autofocus type="text" class="form-control" id="mass" placeholder="grams" aria-label="Username" aria-describedby="basic-addon1" />
         <span> g</span>
       </div>
       <!-- initial temp input -->
